deploy/ingress/canary-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-svc-ingress-canary
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    bfi.live.env: "app-svc-env1"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "X-Canary"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  rules:
  - host: app-svc.local
    http: 
      paths:
      - path: /app-svc(/|$)(.*)
        backend:
          serviceName: app-svc-env2
          servicePort: 9080
