deploy/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-svc-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    bfi.live.env: "app-svc-env1"
spec:
  rules:
  - host: app-svc.local
    http: 
      paths:
      - path: /app-svc(/|$)(.*)
        backend:
          serviceName: app-svc-env1
          servicePort: 9080
  # - host: app-svc-green.local
  #   http:
  #     paths:
  #     - path: /app-svc(/|$)(.*)
  #       backend:
  #         serviceName: app-svc-env2
  #         servicePort: 9080
